1. crawling changes 2. career page submit action 3. header  alignment change 4. header jumping issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1351,3 +1351,11 @@ input[type=number] {
         text-overflow: ellipsis;
     }
 }
+
+p.card-text.show-more {
+    display: unset;
+    -webkit-line-clamp: unset;
+    -webkit-box-orient: unset;
+    overflow: unset;
+    height: unset;
+}
